technical template updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" referrerpolicy="no-referrer" rel="stylesheet">
 
-    <title>Media-Query</title>
+    <title>Technical Satish</title>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg bg-color py-4 pt-lg-5">
     <div class="container">
-        <a class="navbar-brand text-white fw-bold" href="#">Thapa Technical</a>
+        <a class="navbar-brand text-white fw-bold" href="#">Technical Satish</a>
         <button class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -202,7 +202,7 @@
 
             <div class="col-xl-6 col-md-12 ">
                 <div class="d-flex  px-3 py-5 shadow ">
-                    <img class=" d-md-block d-none  img-fluid mx-3" src="./images/online.gif" alt="GIF Image" width="150px">
+                    <img class=" d-md-block d-none  img-fluid mx-3" src="./images/phone.gif" alt="GIF Image" width="150px">
 
                     <div class="row ">
                         <p class="mb-3 fw-bolder">Influencer Marketing </p>
@@ -215,7 +215,7 @@
 
             <div class="col-xl-6 col-md-12 ">
                 <div class="d-flex  px-3 py-5 shadow ">
-                    <img class=" d-md-block d-none  img-fluid mx-3" src="./images/online.gif" alt="GIF Image" width="150px">
+                    <img class=" d-md-block d-none  img-fluid mx-3" src="./images/phone.gif" alt="GIF Image" width="150px">
 
                     <div class="row ">
                         <p class="mb-3 fw-bolder">Content Marketing </p>
@@ -268,7 +268,7 @@
                                 <div class="card  p-3" style="width: 18rem; ">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3 ">Angelina Thapa</p>
+                                        <p class="card-title  mb-3 ">Angelina VK</p>
                                         <p class="card-text ">Some quick example text to build on the card title and
                                             make
                                             up
@@ -290,7 +290,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -311,7 +311,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -336,7 +336,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -357,7 +357,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -378,7 +378,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -402,7 +402,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -423,7 +423,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -444,7 +444,7 @@
                                 <div class="card  p-3" style="width: 18rem;">
                                     <img class="card-img-top" src="https://images.pexels.com/photos/3763188/pexels-photo-3763188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="...">
                                     <div class="card-body text-center">
-                                        <p class="card-title  mb-3">Angelina Thapa</p>
+                                        <p class="card-title  mb-3">Angelina VK</p>
                                         <p class="card-text">Some quick example text to build on the card title and make
                                             up
                                             the bulk of the card's content.</p>
@@ -491,7 +491,7 @@
             <div class="col-xl-3 col-md-6 col-12 ">
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./images/1.png" alt="...">
+                        <span style="width: 100%;padding: 10%;"><img class="card-img-top" src="./images/team-1.jpg" alt="..."></span>
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
 
@@ -512,7 +512,8 @@
             <div class="col-xl-3 col-md-6 col-12 ">
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./images/2.png" alt="...">
+                        <span style="width: 100%;padding: 10%;"><img class="card-img-top" src="./images/team-2.jpg" alt="..."></span>
+
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
 
@@ -532,7 +533,7 @@
             <div class="col-xl-3 col-md-6 col-12 ">
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./images/3.png" alt="...">
+                        <span style="width: 100%;padding: 10%;"><img class="card-img-top" src="./images/team-3.jpg" alt="..."></span>
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
 
@@ -551,7 +552,7 @@
             <div class="col-xl-3 col-md-6 col-12 ">
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="./images/4.png" alt="...">
+                        <span style="width: 100%;padding: 10%;"><img class="card-img-top" src="./images/team-4.jpg" alt="..."></span>
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
 
@@ -636,7 +637,7 @@
                 <div class="col-lg-4 ">
                     <div class="contact-div p-5 d-flex flex-column justify-content-center align-items-center">
                         <div class="icon-div d-flex justify-content-center align-items-center rounded-circle mb-3">
-                            <img class="img-fluid" src="./images/call.gif" alt="GIF Image">
+                            <img class="img-fluid" src="./images/seo.gif" alt="GIF Image">
                         </div>
                         <p class="text-white">(+00) 1234 5678</p>
                     </div>
@@ -646,7 +647,7 @@
                     <div class="contact-div p-5 d-flex flex-column justify-content-center align-items-center">
                         <div class="icon-div d-flex justify-content-center align-items-center rounded-circle mb-3">
                             <!--                            <i class="fa-solid fa-phone"></i>-->
-                            <img class="img-fluid" src="./images/email.gif" alt="GIF Image">
+                            <img class="img-fluid" src="./images/music.png" alt="GIF Image">
                         </div>
                         <p class="text-white">(+00) 1234 5678</p>
                     </div>
@@ -722,11 +723,11 @@
 
             <div class="row">
                 <div class="col-lg-8 col-12 ">
-                    Copyright ©2023 All rights reserved. | This template is made with by <span class="bg-theme"> ThapaTechnical.com</span>
+                    Copyright ©2023 All rights reserved. | This template is made with by <span class="bg-theme"> https://technical-template.onrender.com</span>
                 </div>
                 <div class="col-md-4 col-12  ">
                     <div class="d-flex justify-content-center justify-content-lg-end gap-5 mt-lg-0 mt-3">
-                        <a href="https://www.instagram.com/thapatechnical/" target="_blank">
+                        <a href="https://www.instagram.com" target="_blank">
                             <div class="icon-span d-flex justify-content-center align-items-center rounded-circle mb-3">
                                 <i class="fa-brands fa-instagram"></i>
                             </div>
